# platform-manager

./: .gitignore  .lsp.json  .versionrc.json  Brewfile  CONTRIBUTING.md  SECURITY.md  commitlint.config.js  package-lock.json  package.json  platform-manager.code-workspace  pyproject.toml  settings.json  versions.json
.claude-plugin/: plugin.json
.github/: CODEOWNERS  custom-security-categories.txt  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: ci.md  feat.md  fix.md  security.md
.github/workflows/: branch-guard.yml  claude-action.yml  claude-code-review.yml  pr-notify.yml  security-review.yml  stale.yml
.husky/: pre-commit  pre-push
agents/: HARNESS.md  harness-evaluator.md  harness-generator.md  harness-planner.md  platform-agent.md
audits/: audit-headless-troubleshooting-loop.xml  audit-hooks-channels-scheduled.xml  audit-mcp-plugins-skills.xml
bootstrap/: Brewfile  KEY-MANAGEMENT.md  README.md  apt-packages.txt  install.sh
bootstrap/claude-config/: CLAUDE.md  keybindings.json  settings.json  settings.local.json  shell-helpers.sh  statusline-command.sh
bootstrap/git-hooks/: pre-push
bootstrap/managed-settings.d/: 00-jadecli-security.json  10-jadecli-channels.json  20-jadecli-key-rotation.json
bootstrap/phases/: 01-runtime.sh  02-claude.sh  03-lsp.sh  04-git.sh  05-shell.sh  06-validate.sh  07-claude-config.sh  (+1 more)
crawler/: run.py  schema.sql  schema_kimball.sql  schema_plugins.sql  scrapy.cfg  settings.py
docs/: changelog-parser-plan.md
hooks/: hooks.json
integrations/: DEVOPS-ALIGNMENT.md  INTEGRATIONS.md
scripts/: notify.sh
(+70 files in other folders)
