[project]
name = "platform-manager"
version = "0.1.0"
description = "Claude Code plugin: LSP servers, agentic crawler, and ecosystem management for jadecli"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.11",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
