[project]
name = "platform-manager"
version = "0.1.0"
description = "Claude Code plugin: LSP servers, agentic crawler, and ecosystem management for jadecli"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9",
    "scrapy>=2.11",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]
agent-sdk = [
    "claude-agent-sdk>=0.1.50",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
